bulk operations + unit tests